# KeepAliveDemo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/keepalivedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: supervisor
app/src/main/assets/armeabi-v7a/: supervisor
app/src/main/assets/x86/: supervisor
app/src/main/java/com/example/keepalivedemo/: MainActivity.kt  ScreenActivity.kt
app/src/main/java/com/example/keepalivedemo/daemon/: DaemonConfigurations.java  DaemonManager.java
app/src/main/java/com/example/keepalivedemo/daemon/component/: DaemonProcessReceiver.java  DaemonProcessService.java  MainProcessReceiver.java  MainProcessService.java
app/src/main/java/com/example/keepalivedemo/daemon/nativ/: NativeDaemonAPI.java  SoLoaderCompat.java
app/src/main/java/com/example/keepalivedemo/manager/: ScreenManager.kt
app/src/main/java/com/example/keepalivedemo/receiver/: MessageReceiver.kt  ScreenReceiver.kt
app/src/main/java/com/example/keepalivedemo/service/: ForegroundService.kt  JobSchedulerService.kt  NotificationReceiveService.kt
app/src/main/java/com/example/keepalivedemo/sswo/: ScreenActivity.kt  ScreenManager.kt  ScreenReceiver.kt
app/src/main/java/com/example/keepalivedemo/supervisor/: SupervisorForegroundService.java  SupervisorManager.java
app/src/main/java/com/example/keepalivedemo/utils/: Executors.kt  RomUtil.kt  Util.kt
app/src/main/jni/: daemon.c  supervisor.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/example/keepalivedemo/: ExampleUnitTest.kt
(+6 files in other folders)
